# potato-agent

./: .gitignore  APPROVAL_PATCH_README.md  CURRENT_PROGRESS.md  HERMES_SLIMMING_PLAN.md  Hermes_OpenWebUI_multiuser_SOP.md  INTERFACE_TUI_GATEWAY_BUG_TODO.md  INTERFACE_TUI_GATEWAY_REFACTOR_PLAN.md  LITE_FRONTEND.md  OPENWEBUI_BACKEND_REDUCTION_PLAN.md  README.md  apply_hermes_runtime_profile.py  bind_existing_linux_user.py  cleanup_hermes_user_keys.py  configure_hermes_model.py  deploy_lite_to_installed_openwebui.sh  deploy_openwebui_from_workspace.sh  deprovision_interface_user.py  deprovision_openwebui_hermes_user.py  end_to_end_multiuser_integration.md  generate_multiuser_bundle.py  manage_interface_users.py  provision_interface_user.py  provision_openwebui_hermes_user.py  refresh_hermes_systemd_units.py  rotate_interface_passwords.py  unbind_existing_linux_user.py  users_mapping.example.yaml  users_mapping.yaml
hermes-lite/: README.md  model_tools.py  pyproject.toml  runtime-profile.yaml
hermes-lite/agent/: agent_init.py  agent_runtime_helpers.py  auxiliary_client.py  chat_completion_helpers.py  codex_runtime.py  context_references.py  tool_dispatch_helpers.py  tool_executor.py
hermes-lite/gateway/: __init__.py  status.py
hermes-lite/hermes_cli/: config.py  env_loader.py  plugins.py  runtime_provider.py
hermes-lite/manifests/: browser-assets.json  console-entrypoints.json  direct-dependencies.json  forbidden-paths.json  source-inventory.json  wheel-inventory.json
hermes-lite/potato_hermes_lite/: __init__.py  attachments.py  cli.py  provider_status.py  (+2 more)
(+355 files in other folders)
